[package]
name = "ffxdghack"
version = "0.1.0"
authors = ["Billy J Rhoades II <me@brod.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
url = { version = "2", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "*"
log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.4"